# ska-sdp-datamodels

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  .release  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS  LICENSE  Makefile  README.md  pyproject.toml
docs/: requirements-docs.txt  requirements.txt
docs/rtd-docs/: index.rst
docs/src/: Makefile  RASCIL_Fourier_processing.rst  RASCIL_SDP.rst  RASCIL_api.rst  RASCIL_apps.rst  RASCIL_background.rst  RASCIL_converting_from_ARL.rst  RASCIL_dask.rst  RASCIL_data.rst  RASCIL_developing.rst  RASCIL_development.rst  RASCIL_directory.rst  RASCIL_documenting.rst  RASCIL_examples.rst  RASCIL_functions.rst  RASCIL_install.rst  RASCIL_polarisation_handling.rst  RASCIL_release_process.rst  RASCIL_requirements_management.rst  RASCIL_structure.rst  RASCIL_wagg.rst  RASCIL_workflows.rst  RASCIL_xarray.rst  api.rst  conf.py  data_structure.rst  helper_functions.rst  index.rst  polarisation_handling.rst  xarray.rst
docs/src/apps/: index.rst  (+10 more)
src/: __init__.py
src/ska_sdp_datamodels/: __init__.py  data_convert_persist.py  image_model.py  memory_data_models.py  physical_constants.py  polarisation_convert.py  polarisation_data_models.py  utilities.py  xarray_accessor.py  xarray_coordinate_support.py
tests/: conftest.py  test_create_mr.py  test_import_export.py  test_utilities.py  test_xarray_coordinate_support.py  utils.py
tests/apps/: test_ci_checker_main.py  test_ci_checker_main_functions.py  test_ci_imaging_checker.py  test_ci_imaging_checker_pytest.py  test_generate_results_index.py  test_image_check.py  test_imaging_qa_main.py  test_imaging_qa_main_functions.py  test_performance_analysis.py  test_rascil_advise.py  test_rascil_imager.py  test_rascil_imager_functions.py  test_rascil_rcal.py
tests/apps_rsexecute/: test_imaging_qa_main.py  test_rascil_imager.py  test_rascil_imager_functions.py  test_rascil_sensitivity.py
tests/calibration/: conftest.py  test_calibration_create.py  test_calibration_functions.py  test_calibration_io.py  test_calibration_model.py
tests/configuration/: conftest.py  test_config_convert.py  test_config_create.py  test_config_model.py
tests/data_models/: test_buffer_data_models.py  test_configuration_model.py  test_convolutionFunction_model.py  test_convolution_function_model.py  test_data_convert_persist.py  test_data_model_helpers.py  test_data_model_helpers_zarr.py  test_data_path.py  test_flagTable_model.py  test_flag_table_model.py  test_gainTable_model.py  test_gain_table_model.py  test_gridData_model.py  test_grid_data_model.py  test_image.py  test_image_model.py  test_import_export.py  test_pointingTable_model.py  test_pointing_table_model.py  test_polarisation.py  test_polarisation_convert.py  test_polarisation_functions.py  test_qualityAssessment.py  test_quality_assessment.py  test_skyComponent_model.py  test_skyModel_model.py  test_sky_component_model.py  test_sky_model_model.py  test_vis_model.py  test_visibility.py  test_visibility_model.py  test_visibility_selection.py  test_xarray_coordinate_support.py
tests/gridded_visibility/: test_grid_vis_create.py  test_grid_vis_functions.py  test_grid_vis_model.py
tests/image/: conftest.py  test_image_create.py  test_image_io_convert.py  test_image_model.py
(+252 files in other folders)
