[tool.poetry]
name = "ska-sdp-datamodels"
version = "0.2.1"
description = "SKA SDP Python-based Data Models"
authors = ["SKA SDP Developers"]
license = "Apache 2.0"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-datamodels"
documentation = "https://developer.skao.int/projects/ska-sdp-datamodels/en/latest/"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.dependencies]
python = "^3.9"
astroplan = "^0.8"
astropy = "^5.1"
h5py = "^3.7"
# numpy version set to be compatible with RASCIL
numpy = "^1.23, <1.24"
pandas = "^1.5"
xarray = "^2023.7.0"
msgpack = "1.0.5"
msgpack-numpy = "0.4.8"

# optional dependencies; used by "extras"
python-casacore = "^3.5.1"

[tool.poetry.extras]
python-casacore = ["python-casacore"]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
build = "^0.7.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pylint-junit = "^0.3.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
