[tool.poetry]
name = "ska-sdp-datamodels"
version = "0.2.2"
description = "SKA SDP Python-based Data Models"
authors = ["SKA SDP Developers"]
license = "Apache 2.0"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-datamodels"
documentation = "https://developer.skao.int/projects/ska-sdp-datamodels/en/latest/"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.dependencies]
python = "^3.10"
astroplan = "^0.9"
astropy = "^5.3"
h5py = "^3.9"
numpy = "^1.25"
pandas = "^2.0"
xarray = ">=2023.7.0"
msgpack = "^1.0"
msgpack-numpy = "^0.4"

# optional dependencies; used by "extras"
python-casacore = {version = "^3.5", optional = true}

[tool.poetry.extras]
python-casacore = ["python-casacore"]

[tool.poetry.dev-dependencies]
black = "^22.1"
build = "^0.7"
flake8 = "^4.0"
isort = "^5.10"
pylint = "^2.12"
pylint-junit = "^0.3"
pytest = "^7.1"
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
